changing build to work with spark cluster